Modification de jwt pour pouvoir generer un token.

--- a/Backend/astraScriptum/src/main/resources/application.properties
+++ b/Backend/astraScriptum/src/main/resources/application.properties
@@ -16,6 +16,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
-jwt.secret=astraScriptumSuperSecretKey2025
+jwt.secret=*astraScriptumSuperSecretKey2025#
 # 1 jour en millisecondes
 jwt.expiration=86400000
