Mise ajour des pages pour le deploiment.

--- a/Backend/astraScriptum/src/main/resources/application.properties
+++ b/Backend/astraScriptum/src/main/resources/application.properties
@@ -3,10 +3,9 @@ spring.application.name=astraScriptum
 #spring.security.user.password=admin
 #spring.security.user.roles=USER
 
-spring.datasource.url=jdbc:postgresql://dpg-d4p23te3jp1c73dqdjb0-a.virginia-postgres.render.com:5432/astrascriptum_db
-spring.datasource.username=astrascriptum_db_user
-spring.datasource.password=ajWRrprG8F0FsJyMVDZX6R1K8xFPYHuq
-
+spring.datasource.url=jdbc:postgresql://dpg-d4pael24i8rc73ckba3g-a.frankfurt-postgres.render.com:5432/astrascriptum_db
+spring.datasource.username=astrascriptum_nird_db_user
+spring.datasource.password=fzjmNcKLLnGOHN5C8ebKp1TLxvixuFRK
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
