Modification du nom de la bd dans le application.properties

--- a/Backend/astraScriptum/src/main/resources/application.properties
+++ b/Backend/astraScriptum/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=astraScriptum
 #spring.security.user.password=admin
 #spring.security.user.roles=USER
 
-spring.datasource.url=jdbc:postgresql://dpg-d4pael24i8rc73ckba3g-a.frankfurt-postgres.render.com:5432/astrascriptum_db
+spring.datasource.url=jdbc:postgresql://dpg-d4pael24i8rc73ckba3g-a.frankfurt-postgres.render.com:5432/astrascriptum_nird_db
 spring.datasource.username=astrascriptum_nird_db_user
 spring.datasource.password=fzjmNcKLLnGOHN5C8ebKp1TLxvixuFRK
 spring.datasource.driver-class-name=org.postgresql.Driver
