--- a/Backend/astraScriptum/src/main/resources/application.properties
+++ b/Backend/astraScriptum/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=astraScriptum
-#spring.security.user.name=admin
-#spring.security.user.password=admin
-#spring.security.user.roles=USER
+spring.security.user.name=teddy
+spring.security.user.password=teddy12345
+spring.security.user.roles=ADMIN
 
 spring.datasource.url=jdbc:postgresql://dpg-d4pael24i8rc73ckba3g-a.frankfurt-postgres.render.com:5432/astrascriptum_nird_db
 spring.datasource.username=astrascriptum_nird_db_user
